--- a/dictionary_problems.ipynb
+++ b/dictionary_problems.ipynb
@@ -2,43 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1310"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import csv\n",
+    "import datasets\n",
     "\n",
-    "BOM = '\\ufeff'\n",
-    "def clean(string):\n",
-    "    if string.startswith(BOM):\n",
-    "        return string[len(BOM):].strip()\n",
-    "    return string.strip()\n",
-    "\n",
-    "titanic = []\n",
-    "with open('titanic3.csv') as fp:\n",
-    "    table = csv.reader(fp)\n",
-    "    header = [clean(h) for h in next(table)]\n",
-    "    \n",
-    "    for row in table:\n",
-    "        record = dict((header[i], clean(cell)) for i,cell in enumerate(row))\n",
-    "        titanic.append(record)\n",
-    "len(titanic)"
+    "titanic = datasets.load_titanic()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +35,7 @@
        " 'home.dest': 'St Louis, MO'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +55,7 @@
        "Counter({'1': 500, '0': 809, '': 1})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,6 +65,13 @@
     "\n",
     "Counter([t['survived'] for t in titanic])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
